<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">天天购物</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="main_tab_home">首页</string>
    <string name="main_tab_cate">分类</string>
    <string name="main_tab_cart">购物车</string>
    <string name="main_tab_persion">我的</string>
    <string name="dialog_tip">提示</string>
    <string name="my_browsing_history_str">我的足迹</string>
    <string name="my_integral_str">我的积分</string>
    <string name="goods_no_payment_str">待支付</string>
    <string name="goods_no_shipments_str">待发货</string>
    <string name="goods_no_receive_str">待收货</string>
    <string name="goods_no_evaluation_str">待评价</string>
    <string name="my_collect_str">我的收藏</string>
    <string name="delete_now">删除中…</string>
    <string name="my_collect_goods_str">收藏的宝贝</string>
    <string name="my_allorders_str">全部订单</string>
    <string name="my_allorders_goods_str">查看全部订单</string>
    <string name="my_orders">我的订单</string>
    <string name="my_money_str">账户余额</string>
    <string name="my_account_str">我的账户</string>
    <string name="my_account_safety_str">账户安全</string>
    <string name="my_after_service_str">售后服务</string>
    <string name="my_feedback_str">意见反馈</string>
    <string name="my_setting_str">设置</string>
    <string name="my_login_str">登录</string>
    <string name="androidimageview">图片</string>
    <string name="you_email">您的邮箱</string>
    <string name="you_feedback_message">您的意见</string>
    <string name="feedback_null_tip_str">反馈意见不能为空哦，请输入</string>
    <string name="network_abnormal_tip_str1">网络请求失败,请检查网络连接</string>
    <string name="network_abnormal_tip_str2">网络不可用,请稍后再试</string>
    <string name="message_warm_str">消息提醒</string>
    <string name="wifi_automatic_upgrade_str">WIFI环境下自动升级客户端</string>
    <string name="change_light_str">亮度调节</string>
    <string name="helper_str">帮助中心</string>
    <string name="clear_cache_str">清除缓存</string>
    <string name="check_grade_str">检查更新</string>
    <string name="about">关于</string>
    <string name="nologin_str">亲！您还没登录哦！</string>
    <string name="login_reg_str">登录/注册</string>
    <string name="please_input_username_str">手机</string>
    <string name="please_input_password_str">密码</string>
    <string name="register_str">注册</string>
    <string name="login_str">登 录</string>
    <string name="In_the_login">登录中…</string>
    <string name="shiyongdisanf_str">使用第三方账号登录</string>
    <string name="no_login">未登录</string>
    <string name="change_face_str">修改头像</string>
    <string name="user_tv_str">昵称</string>
    <string name="user_sex_str">性别</string>
    <string name="user_login_password_str">登录密码</string>
    <string name="user_pay_password_str">支付密码</string>
    <string name="user_consingle_address_str">收货地址</string>
    <string name="user_password_change_str">密码修改</string>
    <string name="reg_pwd_tip_str">密码最少为六位字母+数字</string>
    <string name="exit_login_str">退出登录</string>
    <string name="my_username_str">账号</string>
    <string name="confirm">确定</string>
    <string name="cencel_str">取消</string>
    <string name="change_username_tip_str">字母开头的由字母与数字组成的6到10账号</string>
    <string name="change_loginPwd_tip_str">字母开头的由字母与数字组成的6到16密码</string>
    <string name="loginPwd_str">登录密码</string>
    <string name="man_str">男</string>
    <string name="woman_str">女</string>
    <string name="secrecy_str">保密</string>
    <string name="search_history_str">搜索历史</string>
    <string name="clear_search_history_str">清除搜素历史</string>
    <string name="recommend_str">推荐</string>
    <string name="sales_volume_str">销量优先</string>
    <string name="price_str">价格</string>
    <string name="evaluate_str">评价</string>
    <string name="search_str">搜索</string>
    <string name="submit_str">提交</string>
    <string name="filtrate_str">筛选</string>
    <string name="price_height_str">价格从高到低</string>
    <string name="price_low_str">价格从低到高</string>
    <string name="default_str">默认收藏</string>
    <string name="collect_str">收藏</string>
    <string name="failure_str">已失效</string>
    <string name="down_can_refresh_str">下拉可以刷新！</string>
    <string name="edit_all_str">编辑全部</string>
    <string name="edit_str">编辑</string>
    <string name="all_choose_str">全选</string>
    <string name="total_str">合计:</string>
    <string name="jiesuan_str">结算(0)</string>
    <string name="delete_str">删除</string>
    <string name="collect_time_short_str">最近收藏</string>
    <string name="collect_time_long_str">历史收藏</string>
    <string name="cart_zero_str">(0)</string>
    <string name="at_once_str">马上登陆</string>
    <string name="default_strs">默认</string>
    <string name="consignee_address_str">收货地址管理</string>
    <string name="new_address_str">新增收货地址</string>
    <string name="clear_all_str">清空</string>
    <string name="copper_user">铜牌用户</string>
    <string name="silver_user">银牌用户</string>
    <string name="gold_user">金牌用户</string>
    <string name="find_goods">快速查找实惠商品</string>
    <string name="cate_no_pro">该分类下暂时没有商品</string>
    <string name="cate_fail">查找失败</string>
    <string name="pro_details">商品详情</string>
    <string name="no_evaluate">暂无评价</string>
    <string name="contact_the_seller_str">联系商家</string>
    <string name="add_cart_load_str">添加中…</string>
    <string name="jump_str">跳过</string>
    
     <string name="home_qiandao_str">签到</string>
    <string name="home_shouji_str">手机周边</string>
    <string name="home_choujiang_str">抽奖</string>
    <string name="home_gengxin_str">今日更新</string>
    <string name="home_baoyou_str">6.6包邮</string>
    <string name="home_meiri_str">每日20件</string>
    <string name="home_yugao_str">精选预告</string>
    <string name="home_zhideguang_str">值得逛</string>
    <string name="home_Recommended_str">为您推荐</string>
    <string name="loading_iv_str">努力加载中…</string>
    <string name="load_more_str">加载更多…</string>
    <string name="search_pro_from_all_pro_str">在全部商品里搜索</string>
    <string name="check_pro_details">继续拖动，查看图文详情</string>
    <string name="check_more_evaluate_str">查看更多评价</string>
    <string name="add_cart_str">加入购物车</string>
    <string name="buy_it_now_str">立即购买</string>
    <string name="graphic_details_str">图文详情</string>
    <string name="pro_recommend_str">相关推荐</string>
    <string name="sale_history_str">买卖记录</string>
    <string name="buy_number_str">购买数量(限购100件)</string>
    <string name="consignee_str">收货人：</string>
    <string name="phoneNum_str">手机号码：</string>
    <string name="postalCode_str">邮政编码：</string>
    <string name="area_str">所在地区：</string>
    <string name="detailedAddress_str">详细地址：</string>
    <string name="shezhi_moren_str">设为默认收货地址</string>
    <string name="save_str">保存</string>
    <string name="select_area_str">选择地区</string>
    <string name="edit_address_str">修改收货信息</string>
    <string name="picture_mode">图片显示</string>
    <string name="picture_mode_capacity">智能模式</string>
    <string name="picture_mode_high_quality">高质量(适合Wifi环境)</string>
    <string name="picture_mode_ordinary">普通(适合3Gg或2G环境)</string>
    <string name="edit_delete_str">删除收货地址</string>
    <string name="start_shop_str">开启购物之旅</string>
    <string name="all_str">全部</string>
    <string name="phone_register_str">手机号码注册</string>
    <string name="forget_password_str">忘记密码？</string>
    <string name="integral_store_str">积分商城</string>
    <string name="today_update_str">今日更新</string>
    <string name="about_us_str">关于我们</string>
    <string name="copyright_str">Copyright©2014&#8211;2015\ntt.com版权所有</string>
    
    <string name="photograph_str">拍照</string>
    <string name="photo_album_str">从相册选择</string>
    <string name="top_menu_refresh_str">刷新</string>
    <string name="top_menu_search_str">搜索</string>
    <string name="top_menu_home_str">首页</string>
    <string name="top_menu_share_str">分享</string>
    <string name="get_integral_str">赚取积分</string>
    <string name="user_integral_str">您当前积分是</string>
    <string name="contact_us_str">联系我们</string>
    <string name="guide_page_str">欢迎页</string>
    <string name="use_agreement_str">使用协议</string>
    <string name="explain_str">说明</string>
    <string name="attention_to_our_str">关注我们</string>
    <string name="upgrading">正在检查新版本…</string>
    <string name="updateing">修改中…</string>
    <string name="help_serve_str">服务与帮助</string>
    
    <string name="pull_to_refresh_pull_label">下拉刷新…</string>
    <string name="pull_to_refresh_release_label">放开以刷新…</string>
    <string name="pull_to_refresh_refreshing_labels">正在载入…</string>
    <string name="pull_to_refresh_from_bottom_pull_label">@string/pull_to_refresh_pull_label</string>
    <string name="pull_to_refresh_from_bottom_release_label">@string/pull_to_refresh_release_label</string>
    <string name="pull_to_refresh_from_bottom_refreshing_label">@string/pull_to_refresh_refreshing_labels</string>
    <string name="official_website_str">官方网站:www.tt.com</string>
    <string name="kefu_qq_str">客服QQ:3154849598</string>
    <string name="business_mail_str">商务邮箱:171970918@qq.com</string>
    <string name="kefu_mail_str">客服邮箱:3154849598@qq.com</string>
    <string name="at_once_attention_str">立即关注</string>
    <string name="wxhao_str">(微信号:Ttian_com)</string>
    <string name="wx_attention_str">微信里关注“粗茶淡饭之天天购物”</string>
    <string name="kefu_str">天天客服</string>
    <string name="tt_robot_str">tt机器人</string>
    <string name="send_str">发送</string>
    <string name="please_select_payway_str">请选择支付方式</string>
    <string name="alipay_str">支付宝</string>
    <string name="tuijian_alipay">推荐支付宝用户使用</string>
    <string name="tuijian_str">推荐</string>
    <string name="anquan_str">安全便捷</string>
    <string name="wxpay_str">微信支付</string>
    <string name="shouyin_str">收银台</string>
    <string name="shijifukuan_str">实付款：</string>
    <string name="confirm_order_str">提交订单</string>
    <string name="number_str">数量</string>
    <string name="to_merchants_msg_str">给商家留言</string>
    <string name="amount_of_goods_str">商品金额</string>
    <string name="the_freight_str">运费</string>
    <string name="confirm_order_strss">确认订单</string>
    <string name="payway_str">支付方式</string>
    <string name="order_detail_str">订单详情</string>
    <string name="fukuan_str">付款</string>
    <string name="cancel_order_str">取消订单</string>
    <string name="chakan_wuliu_str">查看物流</string>
    <string name="delete_order_str">删除订单</string>
    <string name="shenping_tuikuan_str">申请退款</string>
    <string name="confirm_receive_str">确认收货</string>
    <string name="no_xiangguan_order_str">您还没有相关订单</string>
    <string name="reLoad_str">重新加载</string>
    <string name="remind_fahuo_str">提醒卖家发货</string>
    <string name="jindian_guang_str">进店逛逛</string>
    <string name="cart_item_jian_str">-</string>
    <string name="cart_item_jia_str">＋</string>
    <string name="store_search_str">搜索店铺内宝贝</string>
    <string name="scan_scan_str">扫一扫</string>
    <string name="new_msg_str">消息</string>
    
    
    
   

</resources>