<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/lin"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_gravity="center_horizontal"
    android:background="#50000000"
    android:orientation="vertical" >

    <CheckedTextView
        android:id="@+id/collect_pwindow_default_ctv"
        style="@style/checkedTextView_popupwindow"
        android:checked="true"
        android:text="@string/default_str" />

    <View
        android:layout_width="match_parent"
        android:layout_height="0.5dp"
        android:background="@color/view_line_color" />

    <CheckedTextView
        android:id="@+id/collect_pwindow_time_short_to_long_ctv"
        style="@style/checkedTextView_popupwindow"
        android:text="@string/collect_time_short_str" />

    <View
        android:layout_width="match_parent"
        android:layout_height="0.5dp"
        android:background="@color/view_line_color" />

    <CheckedTextView
        android:id="@+id/collect_pwindow_time_long_to_short_ctv"
        style="@style/checkedTextView_popupwindow"
        android:text="@string/collect_time_long_str" />

    <View
        android:layout_width="match_parent"
        android:layout_height="0.5dp"
        android:background="@color/view_line_color" />

</LinearLayout>