<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/picture_mode_ll"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/white"
    android:orientation="vertical" >

    <View
        android:layout_width="match_parent"
        android:layout_height="0.5dp"
        android:background="@color/view_line_color" />

    <CheckedTextView
        android:id="@+id/picture_mode_default_ctv"
        style="@style/checkedTextView_popupwindow"
        android:text="@string/picture_mode_capacity"
        android:textSize="13sp" />

    <View
        android:layout_width="match_parent"
        android:layout_height="0.5dp"
        android:background="@color/view_line_color" />

    <CheckedTextView
        android:id="@+id/picture_mode_high_quality_ctv"
        style="@style/checkedTextView_popupwindow"
        android:text="@string/picture_mode_high_quality"
        android:textSize="13sp" />

    <View
        android:layout_width="match_parent"
        android:layout_height="0.5dp"
        android:background="@color/view_line_color" />

    <CheckedTextView
        android:id="@+id/picture_mode_ordinary_ctv"
        style="@style/checkedTextView_popupwindow"
        android:text="@string/picture_mode_ordinary"
        android:textSize="13sp" />

    <View
        android:layout_width="match_parent"
        android:layout_height="0.5dp"
        android:background="@color/view_line_color" />

</LinearLayout>