<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <RelativeLayout
        android:id="@+id/search_after_head_title_rl"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:background="@color/activity_titlebar_bgcolor"
        android:gravity="center_vertical" >

        <ImageView
            android:id="@+id/titlebar_head_back_iv"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_alignParentLeft="true"
            android:layout_centerVertical="true"
            android:background="@drawable/title_backward_bg"
            android:contentDescription="@string/action_settings"
            android:padding="5dp" />

        <Button
            android:id="@+id/search_head_btn"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_alignParentRight="true"
            android:background="#00ffffff"
            android:contentDescription="@string/action_settings"
            android:padding="11dp"
            android:focusable="false"
            android:text="@string/search_str"
            android:textColor="@drawable/top_nor_black_text_color"
            android:textSize="13sp" />

        <EditText
            android:id="@+id/search_goods_head_et"
            style="@style/clear_edittext"
            android:layout_toLeftOf="@id/search_head_btn"
            android:layout_toRightOf="@id/titlebar_head_back_iv"
            android:focusable="false"
            android:hint="@string/find_goods" />
    </RelativeLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="44dp"
        android:baselineAligned="false"
        android:orientation="horizontal" >

        <RelativeLayout
            android:id="@+id/search_result_default_rl"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center_vertical"
            android:orientation="horizontal" >

            <TextView
                android:id="@+id/search_result_default_tv"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_centerVertical="true"
                android:layout_marginLeft="20dp"
                android:background="#00ffffff"
                android:gravity="right|center_vertical"
                android:text="@string/default_strs"
                android:textColor="@drawable/tab_text_color"
                android:textSize="13sp" />

            <ImageView
                android:id="@+id/popupw_change_iv"
                android:layout_width="8dp"
                android:layout_height="4dp"
                android:layout_centerVertical="true"
                android:layout_marginLeft="3dp"
                android:layout_toRightOf="@id/search_result_default_tv"
                android:contentDescription="@string/androidimageview"
                android:src="@drawable/follow_accounts_up" />
        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/search_result_sales_rl"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="horizontal" >

            <TextView
                android:id="@+id/search_result_sales_volume_head_tv"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:background="#00ffffff"
                android:gravity="center"
                android:text="@string/sales_volume_str"
                android:textColor="@drawable/tab_text_color"
                android:textSize="13sp" />
        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/search_result_evaluate_rl"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="horizontal" >

            <TextView
                android:id="@+id/search_result_evaluate_head_tv"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:background="#00ffffff"
                android:gravity="center"
                android:text="@string/evaluate_str"
                android:textColor="@drawable/tab_text_color"
                android:textSize="13sp" />
        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/search_result_filtrate_rl"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="horizontal" >

            <TextView
                android:id="@+id/search_result_filtrate_head_tv"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:background="#00ffffff"
                android:gravity="center"
                android:text="@string/filtrate_str"
                android:textColor="@drawable/tab_text_color"
                android:textSize="13sp" />
        </RelativeLayout>
    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="0.5dp"
        android:layout_marginLeft="5dp"
        android:layout_marginRight="5dp"
        android:background="@color/view_line_color" />

</LinearLayout>