<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/search_title_rl"
    android:layout_width="match_parent"
    android:layout_height="48dp"
    android:background="@color/activity_titlebar_bgcolor"
    android:gravity="center_vertical" >

    <ImageView
        android:id="@+id/titlebar_back_iv"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_alignParentLeft="true"
        android:layout_centerVertical="true"
        android:background="@drawable/title_backward_bg"
        android:contentDescription="@string/action_settings"
        android:padding="5dp" />

    <Button
        android:id="@+id/search_btn"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_alignParentRight="true"
        android:background="#00ffffff"
        android:contentDescription="@string/action_settings"
        android:padding="11dp"
        android:text="@string/search_str"
        android:textColor="@drawable/top_nor_black_text_color"
        android:textSize="13sp" />

    <com.kincai.store.view.custom.CleanableAndVoiceEditTextView
        android:id="@+id/search_goods_et"
        style="@style/clear_edittext"
        android:layout_toLeftOf="@id/search_btn"
        android:layout_toRightOf="@id/titlebar_back_iv"
        android:imeOptions="actionSearch"
        android:hint="@string/find_goods"
        app:have_voice_icon="true" />

</RelativeLayout>